gcc/testsuite/rust/rustc/ui/error-codes/E0132.rs
#![feature(start)]

#[start]
fn f< T >() {} // { dg-error ".E0132." "" { target *-*-* } }

fn main() {
}

